--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,39 +1,84 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8" />
-    <title>Personal page</title>
+    <meta charset="UTF-8"/>
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <title>Personal page</title>
+
 </head>
 <body>
-<h1>Личная страница</h1>
-<br/><br/>
-<div>
-
-    <h2>Добро пожаловать на личную страницу пользователя <span th:text="${user.getUsername()}">VALUE</span> </h2>
-
-    <table border="1">
-        <tr>
-            <th>---ID---</th>
-            <th>---Username---</th>
-            <th>---Email---</th>
-            <th>---Password---</th>
-            <th>---Roles---</th>
-        </tr>
-        <tr th:each ="user : ${user}">
-            <td th:text="${user.getId()}"></td>
-            <td th:text="${user.getUsername()}"></td>
-            <td th:text="${user.getEmail()}"></td>
-            <td th:text="${user.getPassword()}"></td>
-            <td th:text="${user.roleToString()}"></td>
-        </tr>
-    </table>
-    <p> Вернуться на <a href="/">главную страницу</a></p>
-    <br/><br/>
-    <form th:method="POST" th:action="@{/logout}">
-        <input type="submit" value="Logout!"/>
+<nav class="navbar navbar-dark bg-dark">
+    <div class="navbar-brand">
+        <span class="font-weight-bold" th:text="${user.email}"/> with roles:
+        <span th:each="role : ${user.getRoleList()}">
+            <span th:text="${role.getAuthority()}"/>
+        </span>
+    </div>
+    <form class="form-inline" th:action="@{/logout}" method="post">
+        <button type="submit" class="btn btn-dark ml-auto">Logout</button>
     </form>
+</nav>
 
+<div class="d-flex" style="height: 100vh">
+    <div class="nav flex-column nav-pills col-2 mt-3" style="padding-right:0">
+        <a class="nav-link active">User</a>
+    </div>
+    <div class="container-fluid bg-light">
+        <div class="tab-content mt-3">
+            <div class="container-fluid">
+
+                <h1>User information-page </h1>
+
+                <div class="tab-content">
+                    <div class="tab-pane fade show active" id="list" aria-labelledby="list-tab">
+                        <div class="card">
+                            <h5 class="card-header">About user</h5>
+                            <div class="card-body">
+                                <table class="table table-striped">
+
+                                    <tr class="table-light">
+                                        <th>Id</th>
+                                        <th>Username</th>
+                                        <th>Email</th>
+                                        <th>Role</th>
+                                    </tr>
+                                    <tbody>
+                                    <tr>
+                                        <td th:text="${user.getId()}"/>
+                                        <td th:text="${user.getUsername()}"/>
+                                        <td th:text="${user.getEmail()}"/>
+                                        <td>
+                                            <div th:each="role : ${user.getRoleList()}"
+                                                 th:text="${role.getName()}">
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" i
+        ntegrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
 </body>
 </html>
